--- a/paper/sections/theory/hamiltonian.tex
+++ b/paper/sections/theory/hamiltonian.tex
@@ -1,7 +1,8 @@
 % \input{../../config}
 % \begin{document}
 
-\COM{Because we see experimental and theoretical signatures of predominantly shared \hplus{} and outer \htwo{} motions in the spectra} For all of these reasons, we have chosen to focus on those two motions in our Hamiltonian. Therefore we focus on the $C_{2v}$ equilibrium geometry and $D_{2d}$ vibrationally averaged geometry in our calculation. The $D_{2d}$ structure and overlaid coordinate system is shown in \reffig{h5geom}. The Hamiltonian we are using in these coordinates is given in \refeq{baseHam}.
+\COM{Because we see experimental and theoretical signatures of predominantly shared \hplus{} and outer \htwo{} motions in the spectra}
+Taking these four coordinates, we construct our Hamiltonian in terms of the stretches of the \htwo{}s and of the shared \hplus{}. We focus on the $C_{2v}$ equilibrium geometry and $D_{2d}$ vibrationally averaged geometry in our calculation. The $D_{2d}$ structure and overlaid coordinate system is shown in \reffig{h5geom}. The Hamiltonian we are using in these coordinates is given in \refeq{baseHam}.
 
 \COM{This might actually not be right...}
 \loadeq{baseHam}
@@ -18,4 +19,5 @@ In this $\mu_{a}$ and $\mu_{s}$ are the effective reduced masses of the symmetri
 
 \loadeq{masses}
 
+The potential $V(a, s, r_1, r_2)$ is constructed by using the Gaussian 09 software package and performing electronic structure calculations on a regular grid in the four coordinates at the aug-cc-PVDZ level of theory. 
 % \end{document}
